# CH32H417-logic-analyzer-pulseview

./: .gitattributes  README_CH32H417.md  build.sh  package_installer.sh  setup_env.sh  setup_env_macos.sh
.github/workflows/: build-macos.yml  build-windows.yml
libsigrok/: .gitignore  CMakeLists.txt  aclocal.m4  config.h.cmake  config.h.in  configure  libsigrok.pc.in
libsigrok/bindings/cxx/: CMakeLists.txt  enums.cpp
libsigrok/bindings/cxx/include/libsigrokcxx/: enums.hpp
libsigrok/contrib/: 60-libsigrok.rules
libsigrok/include/libsigrok/: libsigrok.h  version.h.in
libsigrok/src/: backend.c  device.c  hwdriver.c  session.c  soft-trigger.c  std.c
libsigrok/src/hardware/demo/: api.c  protocol.c  protocol.h
libsigrok/src/hardware/wch-ch32h417/: api.c  ch375_wrapper.c  ch375_wrapper.h  protocol.c  protocol.h
libsigrok/src/output/: srzip.c
libsigrokdecode/: .gitignore  CMakeLists.txt  aclocal.m4  config.h.in  configure  decoder.c  instance.c  libsigrokdecode.h  session.c  type_decoder.c  version.h
libsigrokdecode/decoders/usb_power_delivery/: pd.py
pulseview/: CMakeLists.txt  main.cpp  pulseview.qrc  pulseviewico.rc  translations.qrc
pulseview/l10n/: de.ts  es_MX.ts  zh_cn.ts
pulseview/pv/: application.cpp  application.hpp  devicemanager.cpp  globalsettings.cpp  globalsettings.hpp  logging.cpp  mainwindow.cpp  mainwindow.hpp  session.cpp  session.hpp  storesession.cpp  util.cpp  util.hpp
pulseview/pv/binding/: device.cpp
pulseview/pv/data/: analogsegment.hpp  decodesignal.cpp  decodesignal.hpp  logic.cpp  logicsegment.cpp  logicsegment.hpp  segment.cpp  segment.hpp  signalbase.cpp  signalbase.hpp
pulseview/pv/data/decode/: row.cpp
pulseview/pv/devices/: device.cpp  hardwaredevice.cpp
pulseview/pv/dialogs/: decoder_channel_dialog.cpp  decoder_channel_dialog.hpp  iapdialog.cpp  iapdialog.hpp  settings.cpp  settings.hpp
pulseview/pv/popups/: channels.cpp  channels.hpp
pulseview/pv/subwindows/: subwindowbase.cpp  subwindowbase.hpp
pulseview/pv/subwindows/decoder_selector/: item.cpp  model.cpp  subwindow.cpp  subwindow.hpp
pulseview/pv/toolbars/: mainbar.cpp  mainbar.hpp
pulseview/pv/views/: viewbase.cpp  viewbase.hpp
pulseview/pv/views/decoder_binary/: QHexView.cpp  QHexView.hpp  view copy.cpp  view copy.hpp  view.cpp  view.hpp
pulseview/pv/views/tabular_decoder/: model.cpp  view copy.cpp  view copy.hpp  view.cpp  view.hpp
pulseview/pv/views/trace/: analogsignal.cpp  analogsignal.hpp  cursor.cpp  cursor.hpp  cursorpair.cpp  decodetrace.cpp  decodetrace.hpp  flag.cpp  flag.hpp  header.cpp  header.hpp  logicsignal.cpp  logicsignal.hpp  marginwidget.cpp  mathsignal.cpp  ruler.cpp  ruler.hpp  signal.cpp  signal.hpp  standardbar.cpp  standardbar.hpp  timeitem.cpp  timeitem.hpp  timemarker.cpp  timemarker.hpp  trace.cpp  trace.hpp  tracegroup.cpp  view.cpp  view.hpp  viewitem.hpp  viewport.cpp  viewport.hpp  viewwidget.cpp  viewwidget.hpp
pulseview/pv/widgets/: decodermenu.cpp  devicetoolbutton.cpp  devicetoolbutton.hpp  exportmenu.cpp  importmenu.cpp  popup.cpp  popup.hpp  popuptoolbutton.cpp  sweeptimingwidget.cpp  sweeptimingwidget.hpp  timestampspinbox.cpp
pulseview/themes/qdarkstyle/: style.qss
